study/devops-c9/assignment-k8-full/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: mariadb-service
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: "mariadb-service"
  replicas: 3
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - "database"
      terminationGracePeriodSeconds: 10
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-volume
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mariadb-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-storage"
      resources:
        requests:
          storage: 1Gi
